[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Images/objective_checkbox_ticked.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/NormalTextFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Utilities/Overlays/BookElements/MissionObjective.gd" type="Script" id=3]

[node name="MissionObjective" type="MarginContainer"]
margin_right = 0.272003
margin_bottom = -124.6
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 164.0
margin_bottom = 32.0

[node name="ObjectiveText" type="Label" parent="HBoxContainer"]
margin_right = 160.0
margin_bottom = 32.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
text = "Sub-Objective"
valign = 1

[node name="CrossoutLine" type="ColorRect" parent="HBoxContainer/ObjectiveText"]
visible = false
anchor_top = 0.42
anchor_right = 1.0
anchor_bottom = 0.58
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="HBoxContainer"]
margin_left = 164.0
margin_right = 164.0
margin_bottom = 32.0
stretch_mode = 3
alignment_horizontal = 0

[node name="CompleteTick" type="TextureRect" parent="HBoxContainer/AspectRatioContainer"]
visible = false
margin_right = 32.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
